Bug 438247 - Tag selected in Brush Presets docker reverts back to All after rebooting Krita
Summary: Tag selected in Brush Presets docker reverts back to All after rebooting Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-06-08 12:29 UTC by acc4commissions
Modified: 2021-08-10 09:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-06-08 12:29:20 UTC
SUMMARY
5.0 prealpha

I feel like there was a similar bugreport to this but it was fix. And I see this again.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT
It should display the lastely selected brush tag.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2021-06-09 05:52:22 UTC
I can confirm this for the Jun 08 5.0.0-prealpha (git 8944b0f) appimage.
The tag reverts to All but the text 'All' is not visible until ther tag selection drop down is clicked, then it remains visible (if selected) from that point on.

This does not happen in 4.4.3 hence regression.

Also, the last used brush preset is active and it is highlighted in the Brush Preset History docker but is not highlighted in the Brush Presets docker.
Comment 2 Halla Rempt 2021-08-10 08:34:40 UTC
4.x has:

libs/widgets/KoResourceModel.cpp:        KConfigGroup group =  KSharedConfig::openConfig()->group("SelectedTags");
libs/widgets/KoResourceTaggingManager.cpp:        KConfigGroup group =  KSharedConfig::openConfig()->group("SelectedTags");


These config groups aren't used at all anymore.
Comment 3 Halla Rempt 2021-08-10 09:06:58 UTC
Huh... I just pushed

commit ed849172759877632204faff79e6e2a7c9e3e5ca (HEAD -> master, origin/master, origin/HEAD)
Author: Boudewijn Rempt <boud@valdyas.org>
Date:   Tue Aug 10 10:50:05 2021 +0200

    Save the current tag to kritarc and restore it
    
    BUG:438247

And the bug didn't get closed?
Comment 4 Halla Rempt 2021-08-10 09:07:46 UTC
Argh... I was just using an old gitconfig. Anyway, it's fixed.