Save the current tag to kritarc and restore it

BUG:438247